--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
-celery==5.3.6
-redis==5.0.4
-feedparser==6.0.11
 httpx==0.27.0
 beautifulsoup4==4.12.3
 lxml==5.2.2
-spacy==3.7.4
+feedparser==6.0.11
 geopy==2.4.1
-sqlalchemy==2.0.30
-asyncpg==0.29.0
 python-dotenv==1.0.1
 pydantic==2.7.1
-gdeltdoc==1.3.2
 apscheduler==3.10.4
-tweepy==4.14.0
 aiohttp==3.9.5
-fake-useragent==1.5.1
 loguru==0.7.2
+redis==5.0.4
+sqlalchemy==2.0.30
+asyncpg==0.29.0
+tweepy==4.14.0
+fake-useragent==1.5.1
+spacy==3.7.4
+requests==2.31.0
